--- a/Views/Home/AdminProducts.cshtml
+++ b/Views/Home/AdminProducts.cshtml
@@ -6,85 +6,100 @@
 
 @model ProductsListViewModel
 
-<h1 class="text-center">Table of All Products</h1>
+<style>
+    table {
+        table-layout: fixed;
+        width: 100%;
+    }
 
-<div style="text-align:right">
-    <form asp-controller="Home" asp-action="AdminAddProduct" method="post">
-        <button type="submit" class="btn" style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+    th, td {
+        word-wrap: break-word;
+        width: fit-content;
+    }
+</style>
+
+<div class="row">
+    <div class="col">
+        <h1 class="text-center text-center">Manage Store Products</h1>
+        <form asp-controller="Home" asp-action="AdminAddProduct" method="post">
+            <button type="submit" class="btn float-end" style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
            color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black;
            font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px; width: 150px;">
-           Add Product
-        </button>
-    </form>
+                Add Product
+            </button>
+        </form>
+    </div>
 </div>
 
-<table class="table table-bordered table-striped">
+<div class="row" width="100%">
+    <table class="table table-bordered table-striped">
 
-    <thead class="thead-dark fw-bold" style="background-color: #92b6f0;">
-        <tr>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">ProductId</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Name</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Price</th>
-            <th style="text-align:center; background-color: #92b6f0; width: 1000px;" class="text-white">Description of Product</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Category</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Year</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">NumParts</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">ImgLink</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">PrimaryColor</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">SecondaryColor</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Edit</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Delete</th>
-        </tr>
-    </thead>
-
-    <tbody>
-        @foreach (var x in Model.Products)
-        {
+        <thead class="thead-dark fw-bold" style="background-color: #92b6f0;">
             <tr>
-                <td style="text-align:center">@x.ProductId</td>
-                <td style="text-align:center">@x.Name</td>
-                <td style="text-align:center">$@x.Price</td>
-                <td style="text-align:center">
-                    @{
-                        string shortDescription = x.Description.Length > 75 ? $"{x.Description.Substring(0, 75)}..." : x.Description;
-                        string fullDescription = x.Description;
-                    }
-                    <span class="description-short">@Html.Raw(shortDescription)</span>
-                    <span class="description-full" style="display: none;">@Html.Raw(fullDescription)</span>
-                    @if (x.Description.Length > 75)
-                    {
-                        <button class="btn btn-link show-more">Show more</button>
-                    }
-                </td>
-                <td style="text-align:center">@x.Category</td>
-                <td style="text-align:center">@x.Year</td>
-                <td style="text-align:center">@x.NumParts</td>
-                <td style="text-align:center">@x.ImgLink</td>
-                <td style="text-align:center">@x.PrimaryColor</td>
-                <td style="text-align:center">@x.SecondaryColor</td>
-
-                <td style="text-align:center;">
-                    <button class="btn btn-info" asp-controller="Home" asp-action="EditProduct" asp-route-id="@x.ProductId"
-                            style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
-                            color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black;
-                            font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
-                            Edit
-                    </button>
-                </td>
-
-                <td style="text-align:center;">
-                    <button class="btn btn-danger" asp-controller="Home" asp-action="DeleteProduct" asp-route-id="@x.ProductId"
-                            style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
-                            color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black;
-                            font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
-                            Delete
-                    </button>
-                </td>
+                <th style="text-align:center; background-color: #92b6f0;" class="text-white">ProductId</th>
+                <th style="text-align:center; background-color: #92b6f0;" class="text-white">Name</th>
+                <th style="text-align:center; background-color: #92b6f0;" class="text-white">Price</th>
+                <th style="text-align:center; background-color: #92b6f0;" class="text-white">Description of Product</th>
+                <th style="text-align:center; background-color: #92b6f0;" class="text-white">Category</th>
+                <th style="text-align:center; background-color: #92b6f0;" class="text-white">Year</th>
+                <th style="text-align:center; background-color: #92b6f0;" class="text-white">NumParts</th>
+                <th style="text-align:center; background-color: #92b6f0;" class="text-white">ImgLink</th>
+                <th style="text-align:center; background-color: #92b6f0;" class="text-white">PrimaryColor</th>
+                <th style="text-align:center; background-color: #92b6f0;" class="text-white">SecondaryColor</th>
+                <th style="text-align:center; background-color: #92b6f0;" class="text-white">Edit</th>
+                <th style="text-align:center; background-color: #92b6f0;" class="text-white">Delete</th>
             </tr>
-        }
-    </tbody>
+        </thead>
 
-</table>
+        <tbody>
+            @foreach (var x in Model.Products)
+            {
+                <tr>
+                    <td style="text-align:center">@x.ProductId</td>
+                    <td style="text-align:center">@x.Name</td>
+                    <td style="text-align:center">$@x.Price</td>
+                    <td style="text-align:center">
+                        @{
+                            string shortDescription = x.Description.Length > 75 ? $"{x.Description.Substring(0, 75)}..." : x.Description;
+                            string fullDescription = x.Description;
+                        }
+                        <span class="description-short">@Html.Raw(shortDescription)</span>
+                        <span class="description-full" style="display: none;">@Html.Raw(fullDescription)</span>
+                        @if (x.Description.Length > 75)
+                        {
+                            <button class="btn btn-link show-more">Show more</button>
+                        }
+                    </td>
+                    <td style="text-align:center">@x.Category</td>
+                    <td style="text-align:center">@x.Year</td>
+                    <td style="text-align:center">@x.NumParts</td>
+                    <td style="text-align:center">@x.ImgLink</td>
+                    <td style="text-align:center">@x.PrimaryColor</td>
+                    <td style="text-align:center">@x.SecondaryColor</td>
+
+                    <td style="text-align:center;">
+                        <button class="btn btn-info" asp-controller="Home" asp-action="EditProduct" asp-route-id="@x.ProductId"
+                                style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+                                color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black;
+                                font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
+                                Edit
+                        </button>
+                    </td>
+
+                    <td style="text-align:center;">
+                        <button class="btn btn-danger" asp-controller="Home" asp-action="DeleteProduct" asp-route-id="@x.ProductId"
+                                style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+                                color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black;
+                                font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
+                                Delete
+                        </button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+
+    </table>
+</div>
 
 <div class="row">
     <div class="col">
@@ -104,3 +119,4 @@
         </form>
     </div>
 </div>
+
