--- a/Views/Shared/ProductSummary.cshtml
+++ b/Views/Shared/ProductSummary.cshtml
@@ -11,7 +11,7 @@
                 <span class="badge rounded-pill text-white float-end" style="background-color: #92b6f0;border-color:black; margin-right: 10px;"><small>$@Model.Price</small></span>
             </h4>
             <div class="text-center">
-                <img src="@Model.ImgLink" class="bd-placeholder-img card-img-top text-center" style="width: 400px; height: 400px;">
+                <img src="@Model.ImgLink" class="bd-placeholder-img card-img-top text-center" style="width: auto; height: 400px; max-width: 100%; max-height: 100%;">
             </div>
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
